--- a/58_Promise_API.html
+++ b/58_Promise_API.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./56_Promise_Chaining.js"></script>
-    <script src="./56_LoadScript_using_Promise.js"></script>
+    <script src="./58_Promise_API.js"></script>
 </head>
 <body>
     
