--- a/60_ErrorHandling_try_catch.html
+++ b/60_ErrorHandling_try_catch.html
@@ -1,11 +1,11 @@
-|<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/61_Error_object.js"></script>
+    <script src="./60_ErrorHandling_try_catch.js"></script>
 </head>
 <body>
     
