--- a/61_ErrorObjects_CustomErrors.html
+++ b/61_ErrorObjects_CustomErrors.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+|<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./56_Promise_Chaining.js"></script>
-    <script src="./56_LoadScript_using_Promise.js"></script>
+    <script src="./61_ErrorObjects_CustomErrors.js"></script>
 </head>
 <body>
     
