--- a/62_Finally_clause.html
+++ b/62_Finally_clause.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/JS_error.js"></script>
+    <script src="./62_Finally_clause.js"></script>
 </head>
 <body>
     
